# mlops-zoomcamp-2024-hw

module_1_intro/: pyproject.toml
module_1_intro/notebooks/: hw.ipynb
module_2_experiment_tracking/: .gitignore  pyproject.toml  register_model.py  train.py
