[tool.poetry]
name = "module-1-intro"
version = "0.1.0"
description = ""
authors = ["astraszab <u.astraszab@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
scikit-learn = "^1.4.2"
ipykernel = "^6.29.4"
pyarrow = "^16.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
